--- a/styles.css
+++ b/styles.css
@@ -315,8 +315,8 @@ body {
   background: rgba(255, 255, 255, 0.1);
   padding: 1.5rem;
   border-radius: 15px;
-  position: sticky;
-  top: 204px;
+  margin-top: 71px;
+  margin-bottom: 12px;
   height: fit-content;
   backdrop-filter: blur(5px);
   border: 1px solid rgba(255, 255, 255, 0.1);
